<resources>
    <string name="app_name">桌面大宠物</string>
    <string name="plugin_alarm">闹钟</string>

    <string name="switch_work">开启桌面宠物</string>
    <string name="switch_boot_auto">开机自动启动</string>
    <string name="switch_message_receive">接受微信消息</string>
    <string name="switch_clock">闹铃</string>
    <string name="switch_blueteeth">蓝牙</string>
    <string name="petsetting">宠物设置</string>
    <string name="about">关于</string>
    <string name="vname1">版本号</string>
    <string name="version1">1.1</string>
    <string name="rname1">猫科龙</string>
    <string name="rname2">渣橙</string>
    <string name="rname3">张阳</string>
    <string name="rname4">张丽</string>
    <string name="rname5">金盼盼</string>

    <string name="title_activity_set_alarms">设置闹钟</string>
    <string name="no_alarms">尚未添加任何闹钟</string>
    <string name="desc">WebChat Get RedMoney</string>
    <string name="texts">%$s</string>
    <string name="button_new">New</string>

    <!-- pet -->
    <string name="petname">宠物名</string>
    <string name="petsex">宠物性别</string>
    <string name="petword">个性签名</string>
    <string name="pettheme">宠物主题选择</string>
    <string-array name="themeofpet">
        <item>Beaver</item>
        <item>Bear</item>
        <item>BlueSky</item>
    </string-array>
    <string-array name="valuethemeofpet">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string-array name="sexofpet">
        <item>boy</item>
        <item>girl</item>
    </string-array>
    <string-array name="valuesexofpet">
        <item>1</item>
        <item>0</item>
    </string-array>
    <!-- Menu -->
    <string name="menu_item_new">新建</string>
    <string name="menu_item_save">保存</string>
    <string name="menu_item_delete">删除</string>


    <color name="title_background_color">#000000</color>

    <string name="button_delete">删除</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="ensure_delete">确定删除此闹钟？</string>

    <string name="time_sunday">星期天</string>
    <string name="time_monday">星期一</string>
    <string name="time_tuesday">星期二</string>
    <string name="time_wednesday">星期三</string>
    <string name="time_thursday">星期四</string>
    <string name="time_friday">星期五</string>
    <string name="time_saturday">星期六</string>
    <string name="time_everyday">每天</string>

    <string name="time_day">天</string>
    <string name="time_hour">小时</string>
    <string name="time_min">分钟</string>
    <string name="time_sec">秒</string>

    <string name="default_alarm_label">闹钟</string>

    <string name="dialog_prompt_head">已将闹钟设置为从现在起</string>
    <string name="dialog_prompt_tail">后提醒</string>

    <string name="preference_active">启用</string>
    <string name="preference_label">标签</string>
    <string name="preference_setTime">时间</string>
    <string name="preference_repeat">重复</string>
    <string name="preference_delete">删除闹钟</string>
</resources>
