<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="work_on"
        android:title="@string/switch_work" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <SwitchPreference
        android:defaultValue="true"
        android:key="boot_auto"
        android:title="@string/switch_boot_auto" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <SwitchPreference
        android:defaultValue="true"
        android:key="weixin"
        android:title="@string/switch_message_receive" />


    <Preference
        android:key="alarm"
        android:summary="@string/switch_boot_auto"
        android:title="@string/switch_clock" />

    <Preference
        android:key="Blueteeth"
        android:title="@string/switch_blueteeth" />

    <Preference android:title="@string/petsetting">

        <intent  android:action="android.intent.action.QUICK_CLOCK" />
    </Preference>

    <Preference android:title="@string/about">

        <intent
            android:action="android.intent.action.VIEW"
            android:data="www.baidu.com" />
    </Preference>

</PreferenceScreen>
