<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/themeofpet"
        android:entryValues="@array/valuethemeofpet"
        android:key="pettheme"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pettheme" />
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="1"
        android:inputType="textCapWords"
        android:key="petname"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/petname" />
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/sexofpet"
        android:entryValues="@array/valuesexofpet"
        android:key="petsex"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/petsex" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="1"
        android:inputType="textCapWords"
        android:key="petword"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/petword" />
</PreferenceScreen>